2011-02-13  Jeroen T. Vermeulen <jtv@xs4all.nl>
 test/unit/test_notification.cxx:
 - Eliminated some more use of already-committed nontransaction.
 - Payload should be single-quoted, not double-quoted.
2011-02-09  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/largeobject.hxx, include/pqxx/result.hxx, include/pqxx/util.hxx:
 - Fixes for problems spotted by clang++.
 tools/preprelease
 - Test against clang as well as gcc.
2011-02-07  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/basic_connection.hxx, include/pqxx/cursor.hxx:
 - Fixed "don't include this" directions; fixes #211.  Thanks ehoeks.
 include/pqxx/basic_connection:
 - Cosmetic.
2011-02-07  Jeroen T. Vermeulen <jtv@xs4all.nl>
 doc/libpqxx.xml, include/Makefile.am, include/pqxx/connection_base.hxx,
 include/pqxx/internal/gates/connection-notify-listener.hxx,
 include/pqxx/notification, include/pqxx/notification.hxx,
 include/pqxx/notify-listen, include/pqxx/notify-listen.hxx,
 include/pqxx/pqxx, include/pqxx/trigger.hxx, src/connection_base.cxx,
 src/Makefile.am, src/notification.cxx, src/notify-listen.cxx,
 test/unit/test_notification.cxx:
 - Deprecated in favour of new notification_receiver.
 - Takes payload argument (in addition to existing backend_pid).
 include/pqxx/internal/gates/connection-notify-listener.hxx:
 - Renamed to connection-notification_receiver.hxx.
2011-02-07  Jeroen T. Vermeulen <jtv@xs4all.nl>
 test/test025.cxx:
 - Use DROP TABLE IF EXISTS, not transactor, to drop/create test table.
2011-01-25  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/subtransaction.hxx:
 - Corrected documentation.  Thanks Maxime van Noppen.
2010-10-30  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/connection_base.cxx:
 - Quote bytea as '', not E''.  Thanks RhodiumToad.
2010-10-26  Jeroen T. Vermeulen <jtv@xs4all.nl>
 win32/INSTALL.txt, win32/mingw.mak.template, win32/vc-libpqxx.mak.template,
 win32/vc-test.mak.template:
 - Use ws2_32, not wsock32.  Thanks Christian Freund.